# larmindon-core

./: AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
src/: agc.rs  audio_engine.rs  lib.rs  settings.rs  vad.rs
src/audio_capture/: cpal.rs  mod.rs  pipewire.rs
