[package]
name = "larmindon-core"
version = "0.1.0"
description = "Core audio/ASR engine for Larmindon transcription tool"
authors = ["edmistond"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rubato = "0.14"
parakeet-rs = "0.3.5"
rusqlite = { version = "0.31", features = ["bundled"] }
ort = "2.0.0-rc.12"
ndarray = "0.17"
cpal = { version = "0.17", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9", optional = true }
libspa = { version = "0.9", optional = true }

[features]
default = ["cpal", "pipewire"]
webgpu = ["parakeet-rs/webgpu"]
directml = ["parakeet-rs/directml"]
migraphx = ["parakeet-rs/migraphx"]
pipewire = ["dep:pipewire", "dep:libspa"]
cpal = ["dep:cpal"]
